<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_logo_round"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotHeader"
        android:textSize="35dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/ForgotText"
        android:textSize="18dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextLabelEmail"
        app:startIconContentDescription="@string/HintEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgotEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ForogotButtonStyle"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/GoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="Go back to login Screen"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>